[package]
name = "lpsolve"
version = "0.1.0"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "High-level lpsolve wrapper"
keywords = ["linear", "programming", "optimization", "wrapper"]
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://cmr.gitlab.com/rust-lpsolve/lpsolve"
repository = "https://gitlab.com/cmr/rust-lpsolve.git"
homepage = "https://gitlab.com/cmr/rust-lpsolve"

[dependencies]
lpsolve-sys = "5.5"
libc = "0.2"
bitflags = "0.5"
